# Florence

./: CMakeLists.txt  LICENSE  README.md
examples/: example.flrnc
include/: header.asm  print.asm  render.asm  userio.asm  utils.asm
src/: CMakeLists.txt  assembler.cpp  assembler.hpp  florence.cpp  linker.cpp  linker.hpp
src/fscompiler/: CMakeLists.txt  Compiler.cpp  Compiler.hpp  ErrorLogger.cpp  ErrorLogger.hpp  FlorenceError.hpp  IRElements.hpp  Parser.cpp  Parser.hpp  TokenQueue.hpp  Tokenizer.cpp  Tokenizer.hpp  Tokens.hpp
src/utils/: CMakeLists.txt  fileio.cpp  fileio.hpp
